fixed project title visibility

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -31,7 +31,7 @@
 
 @media screen and (max-width: 768px) {
     .hidden_title{
-        display: block;
+        display: none;
     }
 
 }
